src/styles/index.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap");

body {
  font-family: "Open Sans", sans-serif;
}

ul {
  margin: 0;
  list-style-type: none;
  padding: 0;
}

a {
  text-decoration: none;
  color: black;
}

/* ------seachbar css---------- */
#gb_mini-search-block {
  text-align: center;
}

.gb_searchcontainer {
  max-width: 500px;
  width: 100%;
  display: flex;
  position: relative;
  margin: auto;
}

.gb_searchbar {
  width: 100%;
  border: 1px solid #c2c2c2;

  -webkit-border-radius: 5px;
  border-radius: 5px;
  height: 37px;
  line-height: 37px;
  box-shadow: none;
  display: inline-block;
  position: static;
  margin: 0;
  font: 18px Arial, Helvetica, sans-serif;
  cursor: pointer;
  outline: none;
}

.gb_searchbtn {
  position: absolute;
  right: 0;
  display: inline-block;
  border-radius: 0 3px 3px 0;
  top: 0;
  z-index: 1;
  opacity: 1;
  width: 103px;
  height: 100%;
  border: 1px solid #c4c4c4;
  border-left: none;
  cursor: pointer;
  background-color: #ffba00;
  font-size: 18px;
  font-weight: 600;
  text-transform: uppercase;
}

#ketpl_autocomplete-popup {
  display: block;
  position: absolute;
  top: 48px;
  background: white;
  width: 850px;
  right: 0;
  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.3);
  /* border: 1px solid #e6e5e3; */
}

.ktpl_suggestionscontainer {
  width: 100%;
  max-width: 150px;
  background-color: #e6e5e3;
}

.ktpl_leftpanel {
}

.ktpl_searchRight {
  display: flex;
  align-items: baseline;
  padding: 20px;
}

.ktpl_searchCategory {
  padding-right: 20px;
  text-align: left;
  width: 150px;
  flex-shrink: 0;
}

.ktpl_category-list-item {
  margin: 5px 0;
  font-size: 12px;
}

.ktpl_popUp-title {
  text-align: left;
}

.ktpl_category-list-item:first-child {
  font-size: 18px;
  font-weight: bold;
  margin-top: 0;
}

.ktpl_category-list-item a:hover {
  color: #c41134;
}

.ktpl_serach-suggestion-title {
  font-size: 18px;
}
.ktpl_category-list-item:last-child {
  margin-bottom: 0;
}

.ktpl_item-name {
  font-size: 12px;
  text-align: left;
}

.ktpl_item-name:hover {
  color: #c41134;
}

.ktpl_item-price {
  font-size: 12px;
  text-align: left;
  color: #731d2a;
  font-weight: bold;
}

.ktpl_rightpanel {
  margin-top: 10px;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.ktpl_searchcard {
  width: calc((100% - 4%) / 3);
  margin-left: 2%;
  margin-bottom: 20px;
}

.ktpl_searchcard:nth-child(3n + 1) {
  margin-left: 0%;
}

.ktpl_leftlist-link {
  display: block;
  padding: 15px;
}

.ktpl_leftlist {
  text-align: left;
  display: block;
  font-size: 16px;
  overflow-wrap: break-word;
  word-wrap: break-word;
  color: black;
}

.ktpl_leftlist:hover .ktpl_leftlist-link {
  color: #c41134;
}

.ktpl_leftlist:hover {
  background-color: white;
}

.ktpl_leftlist:first-child .ktpl_leftlist-link {
  background-color: white;
  color: #c41134;
}

.ktpl_right-product-image {
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 100%;
}

.ktpl_right-product-image img {
  width: 120px;
  /* max-width: 100%; */
}

.ktpl_search-popup-footer {
  text-align: right;
}

